[gd_scene load_steps=3 format=3 uid="uid://bau35twx12g8"]

[ext_resource type="Texture2D" uid="uid://5akhkmkmidjl" path="res://ProblemCustomer/Pizza_BlankCrust.PNG" id="1_2gksf"]
[ext_resource type="Script" path="res://ProblemCustomer/pizza.gd" id="1_gagpk"]

[node name="Pizza" type="Node2D"]
script = ExtResource("1_gagpk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(288, 96)
scale = Vector2(0.235, 0.114999)
texture = ExtResource("1_2gksf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
